# urcl-intepreter

./: CMakeLists.txt  input.urcl
src/: main.c  parser.c  parser.h  utilities.h
